--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "editor.tabSize": 4,
-    "editor.insertSpaces": false,
-    "editor.renderWhitespace": "all",
-    "files.trimTrailingWhitespace": true,
-    "files.insertFinalNewline": true
+	"C_Cpp.errorSquiggles": "disabled"
 }
